Add query function

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mtu-dinning",
+  "name": "mtu-dining",
   "version": "1.0.1",
   "description": "🌮 🌭 A scrapper for MTU's dinning halls.",
   "main": "index.js",
