--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "🌮 🌭 A scrapper for MTU's dinning halls.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "xo && ava"
   },
   "author": "Max Isom <codetheweb@icloud.com> (https://maxisom.me)",
   "license": "MIT",
@@ -12,5 +12,12 @@
     "cheerio": "^1.0.0-rc.2",
     "got": "^9.3.2",
     "moment": "^2.22.2"
+  },
+  "devDependencies": {
+    "ava": "^0.25.0",
+    "xo": "^0.23.0"
+  },
+  "xo": {
+    "space": true
   }
 }
