--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "csv": "^5.1.1",
     "got": "^9.3.2",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "papaparse": "^4.6.3"
   },
   "devDependencies": {
     "ava": "^0.25.0",
     "xo": "^0.23.0"
   },
   "xo": {
-    "space": true
+    "space": true,
+    "rules": {
+      "new-cap": [1]
+    }
   }
 }
