--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mtu-dining",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "🌮 🌭 A scrapper for MTU's dinning halls.",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,9 @@
   "xo": {
     "space": true,
     "rules": {
-      "new-cap": [1]
+      "new-cap": [
+        1
+      ]
     }
   }
 }
